<resources>

    <string name="app_name2">MmCalendar</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello">Hello World, CalendarActivity!</string>
    <string name="app_name">女性日历</string>
    <string name="app_name_small">女性日历</string>

    <string name="last_mense">上次月经日期</string>
    <string name="avg_lastdays">平均月经周期</string>
    <string name="avg_days">平均行经期   </string>
    <string name="next_mense">下次月经日期</string>
    <string name="get_next_mense">计算下次月经期</string>
    <string name="show_safety">显示安全期</string>
    <string name="lastmensen">上次月经日期,必填</string>
    <string name="avglastdays">平均月经周期,必填</string>
    <string name="avglastdays2">月经周期,一般为26-35天</string>
    <string name="lastdays">平均行经期,必填</string>
    <string name="lastdays2">平行经期,一般为3-8天</string>
    <string name="title_mensen_date">安全期计算</string>

    <string name="title_due_date">预产期计算</string>
    <string name="mensen">末次月经日期</string>
    <string name="due_date">您的预产期是 </string>
    <string name="due_date2">孕期</string>
    <string name="due_date3">周</string>
    <string name="get_duedate">计算您的预产期</string>
    <string name="mensen_error">末次月经日期,必填</string>
    <string name="due_str">%1$d周 %2$d天 距宝宝出生还有%3$d天</string>
     <string name="studybook">
         1.什么是安全期？\n\t正常育龄妇女每个月来1次月经，从本次月经来潮开始到下次月经来潮第l天，称为1个月经周期。如从避孕方面考虑，可以将妇女的每个月经周期分为月经期、排卵期和安全期。\n\n
         2.安全期推算\n从下次月经来潮的第1天算起，倒数14天或减去14天就是排卵日，排卵日及其前5天和后4天加在一起称为排卵期。这就是安全期避孕法的理论根据。例如，某妇女的月经周期为28天，本次月经来潮的第1天在12月2日，那么下次月经来潮是在12月30日(12月2日加28天)，再从12月30日减去14天，则12月16日就是排卵日。\n
         排卵日及其前5天和后4天，也就是12月11-20日为排卵期。除了月经期和排卵期，其余的时间均为安全期。采用安全期避孕容易失败。因为有些妇女有时因健康情况、环境改变及情绪波动等可以使排卵推迟或提前，这样按月经周期推算出来的排卵期就不够正确。\n\n
         3.月经期护理\n【生理期护肤经】\n生理期的肌肤护理，要从减少刺激和降低营养两个方面着手，为了更好地保护肌肤免受伤害，尽量少去或不去那些粉尘污染严重的地方。以油洗油 为了预防干燥，减少碱性洗剂对肌肤的刺激，最好选用油性较足的洗面奶。洗脸时，不要用力去搓干燥的两颊，将清洁的重点放在出油较多的T字部位上，以油洗油，再用清水冲洗，以彻底清除肌肤表层的角质细胞和毛囊深处的污垢。
　　眼周抗皱对于眼圈周围的黑晕，可在涂抹眼霜以后，轻轻划圈按摩眼部肌肤，再用指腹扣住眼眶，点压眼眶周围，尤其是黑晕严重的部位。将去皱精华液，涂抹在眼角细纹处，反复按摩，促进吸收。补水保湿将日常用的普通日霜，改为具有补水保湿作用的日霜。早晚洁面后用保湿水喷洒肌肤，在生理期内，可连续两天，每晚临睡前一小时用保湿面膜敷脸，以保持肌肤水嫩滋润，预防干燥。
　　暖睡8小时 生理期内，身体很容易疲惫，而且由于生理失血，体温相对较低，容易感觉体寒。平时睡6-7小时也就够了，但这一时期最好每天保证睡足8小时，且要注意防寒保暖，让身体始终处于温暖舒适的状态下，有利于体内正常的血液循环，对于彻底消除肌肤倦容，十分有用。
　　香氛也护肤 生理期的体味，下体的不适等会直接影响心情，而情绪的波动又会带来体内荷尔蒙的变化，进而影响到肌肤状态。适当使用香氛，不但能遮盖体味，更能保持神清气爽，令肌肤状态也光彩照人。\n
       【生理期化妆经】\n
       生理期彩妆的重点，在于掩饰苍白、蜡黄的脸色，使肌肤看起来红润、有生气。趋光度好的粉底，能使肌肤显得明亮，有光泽，非常适合生理期使用。值得注意的是，为了防止出现过敏现象，在上粉底以前，最好先涂上一层质地温和的乳液或隔离霜。
　　暖色调的腮红，是肌肤红润、气色好的必备武器。选择粉红色、粉橘色、玫瑰红、杏红、桃红等明快鲜艳的色彩，有技巧地打在两颊上，额头、脖子等部位也稍稍打一些，使肤色整体看来粉嫩润泽。\n
     【月经期护理 】\n\t1、保持精神愉快，避免精神刺激和情绪波动。个别在月经期有下腹发胀、腰酸、乳房胀痛、轻度腹泻、容易疲倦、嗜睡、情绪不稳定、易怒或易忧郁等现象，均属正常，不必过分紧张。 \n\t2、内裤要柔软、棉质、通风透气性能良好，要勤洗勤换，换洗的内裤要放在阳光下晒干。\n\t3、注意卫生，预防感染。首先注意外生殖器的卫生。月经期间绝对不能性交。量大时要勤换卫生巾，还可选用市面针对量大期间的卫生巾，如护舒宝等牌子推出的量多日用型卫生巾。\n　
\t4、注意保暖，避免寒冷刺激。避免过劳。\n\t5、不宜吃生冷、酸辣等刺激性食物，多饮开水，保持大便通畅。血热者经期前宜多食新鲜水果和蔬菜，忌食葱蒜韭姜等刺激运火之物；气血虚者平时必须增加营养，如牛奶、鸡蛋、豆浆、猪肝、菠菜、猪肉、鸡肉、羊肉等。忌食生冷瓜果。经血量多者忌食红糖。\n\t6、月经期间一般吃一些香蕉，甜橙，榴莲，人参果，番石榴等水果，可以每日三种早、中、晚交换食用。但是如果是有疼经的女性，建议最好少吃苹果。而体质比较好的女性，苹果、梨等水果也可吃。\n
    </string>
    <string name="studybookt">
        1.孕期\n\n\t孕期就是怀孕周数，医学上的孕期是指从末次月经的第一天（并不是从同房的那天算起）开始，到分娩结束。\n\n1）怀孕的天数从末次月经的第一天算起。按常规，怀孕在7周之内，可以“药流;7周以外只能“人流”;超过10周无法“人流”，仅存"引产"。\n2）计算预产期，只需在末次月经第一天加上9个月零1周（280天）即可。\n例如：末次月经是1月1日，加9个月为10月1日，再加1周，为10月8日，10月8日就是预产期。真正分娩可能发生在预产期的前后2周内。\n如果你的月经周期不太规则，或记不清末次月经的日期，请在妊娠早期根据妇科检查来推算。\n不要按摩乳房有研究显示，产前作乳房按摩，有可能成为早产原因之一。\n不需使用润肤乳 在28周-36周，初乳出现后准妈咪在沐浴之后，挤出少量乳汁，涂在乳头周围皮肤上。干后就形成薄膜，它的滋润效果比任何护肤品都好。\n\n肌肤变化\n\n\t1、干燥：汗腺、皮脂腺功能下降\n
        皮脂中因含蜡类，所以与蜡烛性质相仿，遇热熔化，而到了秋冬气温较低，便成半球体，分泌量也减少，故入秋后皮肤显得干燥，需要加强保湿及水分、营养的补给。孕期肌肤干燥缺水，日常要注意使用豆乳保湿类孕妇护肤品做好肌肤补水保湿，远离干燥困扰。\n\t2、肌肤搔痒：水分流失，肌肤水油不平衡\n\n怀孕的妈妈因为体质及荷尔蒙的改变，身体对气候环境的敏感度更强，常常一些天气上的小转变就惹得怀孕妈妈全身搔痒，什么过敏症状都出现了。\n\t3、脱皮：角质剥落\n在夏日，肌肤为抵抗紫外线而角质变厚，但到了夏末因紫外线减弱，使得已肥厚的角质会逐渐还原至原来的厚度，因而在8月底前会感觉到皮肤有明显粉状脱屑现象，皮肤也会有沙沙的特别粗糙的感觉。
    </string>
    <string name="setSaft">设置安全显示</string>
    <string name="setDesk">配置桌面插件</string>
    <string name="exitApp">退出应用</string>
    <string name="taobao">http://ai.m.taobao.com?pid=mm_27620149_7486601_27176809</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nowifi">抱歉当前环境检测不到网络，请确认网络连接状态</string>
</resources>
