<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:baiduadsdk="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >
 <ScrollView
        android:id="@+id/scrollView2"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="5dp"
       
        android:background="@drawable/corner_solid_mistyrose"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center" >

            <TextView
                android:id="@+id/last_mense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="left"
                android:text="@string/last_mense"
                android:textColor="@color/red" />

            <EditText
                android:id="@+id/lastmensen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:textColorHint="@color/global_gray"
                android:background="@drawable/selector_btn"
                android:ems="10"
                android:hint="2013-05-20"
                android:inputType="none"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center" >

            <TextView
                android:id="@+id/avg_lastdays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/avg_lastdays"
                android:textColor="@color/red" />

            <Spinner
                android:id="@+id/avglastdays"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/corner_stroke_black"
                android:ems="10"
                android:textColorHint="@color/global_gray"
                android:hint="@string/avglastdays2"
                android:inputType="number"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center" >

            <TextView
                android:id="@+id/avg_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/avg_days"
                android:textColor="@color/red" />

            <Spinner
                android:id="@+id/lastdays"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:textColorHint="@color/global_gray"
                android:background="@drawable/corner_stroke_black"
                android:ems="10"
                android:hint="@string/lastdays2"
                android:inputType="number"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="left"
                android:text="@string/next_mense"
                android:textColor="@color/red" />

            <EditText
                android:id="@+id/nextmensen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/selector_btn"
                android:editable="false"
                android:textColorHint="@color/global_gray"
                android:ems="10"
                android:hint="待计算"
                android:inputType="date"
                android:textColor="@color/black" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/get"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="34dp"
                android:background="@drawable/corner_solid_red"
                android:text="@string/get_next_mense"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/show"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="33dp"
                android:layout_toRightOf="@+id/get"
                android:background="@drawable/corner_solid_red"
                android:text="@string/show_safety"
                android:textColor="@color/white" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center" >

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:background="@drawable/corner_solid_lightcoral"
                android:gravity="right"
                android:text="排卵期"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:background="@drawable/corner_solid_yellow"
                android:gravity="right"
                android:text="月经期"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_solid_green"
                android:gravity="right"
                android:text="安全期"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>
</ScrollView> 
   

        <!-- 注： baiduadsdk:adId可以指定为"",表示默认广告位 -->

   

</LinearLayout>