<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:baiduadsdk="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/corner_solid_mistyrose"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center" >

            <TextView
                android:id="@+id/mensetxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="left"
                android:text="@string/mensen"
                android:textColor="@color/red" />

            <EditText
                android:id="@+id/mensenEtx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColorHint="@color/global_gray"
                android:layout_weight="1"
                android:background="@drawable/selector_btn"
                android:hint="2013-05-20"
                android:textColor="@color/black" 
                android:inputType="none" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center" >

            <TextView
                android:id="@+id/avgm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="@string/avg_lastdays"
                android:textColor="@color/red" />

            <Spinner
                android:id="@+id/avglastdays"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_marginLeft="5dp"
                android:textColorHint="@color/global_gray"
                android:layout_weight="1"
                android:background="@drawable/corner_stroke_black"
                android:ems="10"
                android:hint="@string/avglastdays2"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center" >

            <TextView
                android:id="@+id/due_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="left"
                android:text="@string/due_date"
                android:textColor="@color/red" />

            <EditText
                android:id="@+id/duedate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:textColorHint="@color/global_gray"
                android:background="@drawable/selector_btn"
                android:editable="false"
                android:ems="10"
                android:textColor="@color/black" 
                android:hint="待计算"
                android:inputType="date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center" >

            <TextView
                android:id="@+id/due_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:gravity="right"
                android:text="@string/due_date2"
                android:textColor="@color/red" />

            <EditText
                android:id="@+id/inweek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_weight="1"
                android:textColorHint="@color/global_gray"
                android:background="@drawable/selector_btn"
                android:editable="false"
                android:ems="10"
                android:hint="待计算"
                android:textColor="@color/black" 
                android:inputType="date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/getdue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="34dp"
                android:background="@drawable/corner_solid_red"
                android:text="@string/get_duedate"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/shareSNS"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/getdue"
                android:background="@drawable/corner_solid_red"
                android:text="分享到SNS..."
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>



</LinearLayout>